--- a/Data-Products-3.html
+++ b/Data-Products-3.html
@@ -30,7 +30,7 @@
       // Author information
       presenters: [
             {
-        name:  'me' ,
+        name:  'Justin Desrosier' ,
         company: '',
         gplus: '',
         twitter: '',
@@ -3292,7 +3292,15 @@ head(mtcars, 3)</pre>
 
 <p>fit &lt;- reactive({ lm(as.formula(formulaTextPoint()), data=mpgData) }) … output$fit &lt;- renderPrint({ summary(fit()) })</p>
 
-<p>output$mpgPlot &lt;- renderPlot({ with(mpgData, { plot(as.formula(formulaTextPoint())) abline(fit(), col=2) }) }) ```</p></article></slide>
+<p>output$mpgPlot &lt;- renderPlot({ with(mpgData, { plot(as.formula(formulaTextPoint())) abline(fit(), col=2) }) }) ```</p>
+
+</article></slide><slide class=""><hgroup><h2>Link to Shiny Application, RPubs Presentation, and GitHub Page</h2></hgroup><article  id="link-to-shiny-application-rpubs-presentation-and-github-page">
+
+<p><strong>Shiny App:</strong> <a href='https://jbdesrosier.shinyapps.io/Data-Products-3/?_ga=2.265656009.793965011.1623156114-99701884.1623156114' title=''>https://jbdesrosier.shinyapps.io/Data-Products-3/?_ga=2.265656009.793965011.1623156114-99701884.1623156114</a></p>
+
+<p><strong>RPubs Slides:</strong> <a href='https://rpubs.com/jbdesrosier/778919' title=''>https://rpubs.com/jbdesrosier/778919</a></p>
+
+<p><strong>GitHub Repository</strong> <a href='https://github.com/jbdesrosier/Data-Products-3' title=''>https://github.com/jbdesrosier/Data-Products-3</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
